SonarQube integration fix

--- a/.travis.yml
+++ b/.travis.yml
@@ -29,7 +29,11 @@ addons:
   branches:
     - master
 script:
+  - ./bootstrap && ./configure --disable-credssp --disable-smartcard
+  - make clean 
+  - build-wrapper --out-dir bw-outputs make
   - sonar-scanner
+
   
 script: ./bootstrap && ./configure --disable-credssp --disable-smartcard && make
 
