--- a/sonar-project.properties
+++ b/sonar-project.properties
@@ -10,5 +10,11 @@ sonar.projectVersion=1.8.3
 # the sonar-project.properties file.
 sonar.sources=.
  
-# Encoding of the source code. Default is default system encoding
-#sonar.sourceEncoding=UTF-8
+# Language, needed for SonarQube < 4.2
+sonar.language=c
+
+# The build-wrapper output dir
+sonar.cfamily.build-wrapper-output=bw-outputs
+
+# Encoding of the source files
+sonar.sourceEncoding=UTF-8
