--- a/sonar-project.properties
+++ b/sonar-project.properties
@@ -10,11 +10,8 @@ sonar.projectVersion=1.8.3
 # the sonar-project.properties file.
 sonar.sources=.
  
-# Language, needed for SonarQube < 4.2
-sonar.language=c
-
-# The build-wrapper output dir
-sonar.cfamily.build-wrapper-output=bw-outputs
-
 # Encoding of the source files
 sonar.sourceEncoding=UTF-8
+
+sonar.cfamily.build-wrapper-output=build-wrapper-out
+sonar.branch=master
