--- a/sonar-project.properties
+++ b/sonar-project.properties
@@ -1,17 +1,17 @@
 # must be unique in a given SonarQube instance
-sonar.projectKey=rdesktop:master
+sonar.projectKey=rdesktop:integration
 # this is the name and version displayed in the SonarQube UI. Was mandatory prior to SonarQube 6.1.
 sonar.projectName=rdesktop
 sonar.projectVersion=1.8.3
- 
+
 # Path is relative to the sonar-project.properties file. Replace "\" by "/" on Windows.
-# Since SonarQube 4.2, this property is optional if sonar.modules is set. 
-# If not set, SonarQube starts looking for source code from the directory containing 
+# Since SonarQube 4.2, this property is optional if sonar.modules is set.
+# If not set, SonarQube starts looking for source code from the directory containing
 # the sonar-project.properties file.
 sonar.sources=.
- 
+
 # Encoding of the source files
 sonar.sourceEncoding=UTF-8
 
 sonar.cfamily.build-wrapper-output=build-wrapper-out
-sonar.branch=master
+sonar.branch=integration
