--- a/.travis.yml
+++ b/.travis.yml
@@ -7,5 +7,6 @@ compiler: gcc
 before_install:
  - sudo apt-get -qq update
  - sudo apt-get install -y libpcsclite-dev
+ - sudo apt-get install -y libtasn1-dev
 
 script: ./bootstrap && ./configure && make
