Replace HMAC_MD5, SHA1, RC4, MD5 with Nettle's counterparts
(cherry picked from commit 84eef80cb66fccd68b851a353bcfcdbbbf980c42)

--- a/.travis.yml
+++ b/.travis.yml
@@ -7,6 +7,6 @@ compiler: gcc
 before_install:
  - sudo apt-get -qq update
  - sudo apt-get install -y libpcsclite-dev
- - sudo apt-get install -y libtasn1-dev
+ - sudo apt-get install -y nettle-dev libtasn1-dev
 
 script: ./bootstrap && ./configure && make
